# zapbot

./: .dockerignore  API_README.md  Dockerfile  README.md  docker-compose.yml  env.example  evolution_client.py  init.sql  main.py  pyproject.toml  redis.conf
app/: __init__.py  config.py  models.py
app/routers/: health.py  instances.py  messages.py
app/services/: evolution_service.py
docs/: arquitetura.md  arquitetura_ascii.txt
