[tool.poetry]
name = "zapbot"
version = "0.1.0"
description = ""
authors = ["MieleSantos <mielesnts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
websockets = "^12.0"
aiohttp = "^3.9.0"
asyncio = "^3.4.3"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
